# simple-request

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: rust.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  secret_manager.rs
src/components/: CollectionSidebar.tsx  DragHandle.tsx  ImportExportActions.tsx  RequestBuilder.tsx  ResponseViewer.tsx  SyntaxHighlighter.tsx  ThemeProvider.tsx
src/hooks/: useResize.ts
src/styles/: components.css  drag-handles.css  globals.css  index.css  layout.css  request-builder.css  response-viewer.css  secrets.css  sidebar.css  syntax-highlighter.css  theme-provider.css
src/types/: api.ts
src/utils/: SecretManager.tsx
