[package]
name = "simple-request"
version = "1.0.2"
description = "A lightweight API client"
authors = ["Jordan Cooper"]
license = "GPL-3.0"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-http = "2" 
tauri-plugin-shell = "2"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
