[package]
name = "simple-request"
version = "1.0.2"
description = "A lightweight API client"
authors = ["Jordan Cooper"]
license = "GPL-3.0"
repository = ""
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-http = "2" 
tauri-plugin-shell = "2"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
keyring = "3.3"
aes-gcm = "0.10.3"
argon2 = "0.5"
base64 = "0.22"
uuid = { version = "1.0", features = ["v4"] }
dirs = "5.0"
rand = "0.8"

[features]
custom-protocol = ["tauri/custom-protocol"]
